--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-02-19  Ryan Yeske  <rcyeske@cut.hotdog.tmp>
+
+	* autogen.sh: Run aclocal before autoheader.
+
 2001-02-18  Gergely Nagy  <8@free.bsd.hu>
 
 	* NEWS: mention that ALL of the fixed size buffers are fixed.
