--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-02-21  Ryan Yeske  <rcyeske@cut.hotdog.tmp>
+
+	* configure.in: change version to 0.0.6-cvs
+
 2001-02-19  Ryan Yeske  <rcyeske@cut.hotdog.tmp>
 
 	* autogen.sh: Run aclocal before autoheader.
