--- a/NEWS
+++ b/NEWS
@@ -79,7 +79,11 @@ ratpoison now outputs user error messages.
 All fixed length buffer sizes in window names that resulted in
 curious segfaults have been fixed.
 
+** Themes support
+C preprocessor based window manager themes are now supported.  See
+src/conf.h and src/themes.h.
 
+
 * Changes Singe 0.0.4
 ** added --kill and --restart
 These command line options allow the restarting and killing of a
@@ -89,6 +93,7 @@ running ratpoison process.
 This is pretty annoying if you're using anything other than keyboard
 apps. It is disabled by default.
 
+
 * Changes Since 0.0.3
 ** Added --enable-debug
 This turns on debugging messages
